# arcgis-ai-analysis

./: .gitignore  SETUP.md  item_registry_staging.json  prompts.md  pyproject.toml
.github/agents/: arcgis-python-api.agent.md  feature-orchestration.agent.md
icons/: README.md
notebooks/: create-approver-app.ipynb  create-field-collection-layer.ipynb  detect-objects-deep-learning.ipynb  manage-views-and-webmaps.ipynb  plant-identification-ai.ipynb  test-pending-view.ipynb  update-field-collection-layer.ipynb
qaqc/: __init__.py  dedup.py  tree.py
schemas/: __init__.py  plant_id.py
tools/: README.md  arcgis_inspect.py  exb.py  exb_icons.py
views/: __init__.py  manage.py
